# eiskaltdcpp

./: .gitignore  .transifex.conf  .travis.yml  AUTHORS  AUTHORS.txt  CMakeLists.txt  COPYING  COPYING.DCPP  ChangeLog.txt  ChangeLog_ru.txt  ChangeLog_ua.txt  ChangeLog_uk.txt  DEVELOPERS.NOTES  INSTALL  LICENSE  README  README.html  README.md  TODO  Version.h  Version.h.in  eiskaltdcpp  eiskaltdcpp.desktop  eiskaltdcpp.pc.in  full.copyrights.info.in.Debian.style  openssl-no-atexit.patch  transifex.config  update-translations.sh  update_geoip  xcompile2.sh
data/: CMakeLists.txt  update_geoip
data/emoticons/: default.xml  flylink.xml  kde4.xml  radox.xml
data/examples/: audacious.en_US.sh  commands.ru_RU.UTF-8.php  deadbeef.ru_RU.UTF-8.sh  mod.amarok.sh  mpris_now_playing.en_US.sh  qmmp.ru_RU.UTF-8.sh  xmms2_audacious2.ru_RU.UTF-8.php
data/icons/: READ_ME.txt  icon_1024x1024.icns  icon_128x128.icns
data/luascripts/: antispam.lua  bier.lua  formatting.lua  formatting_settings.conf  ignore.lua  kickfilter.lua  kml_geoip.lua  log.lua  p2pblock.lua  quiet_login.lua  readme.txt  slots.lua  uptime.lua
data/sounds/: READ_ME.txt
dcpp/: ADLSearch.cpp  ADLSearch.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  Atomic.h  BZUtils.cpp  BZUtils.h  BitInputStream.h  BitOutputStream.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  Bundle.cpp  Bundle.h  BundleItem.h  CID.cpp  CID.h  CMakeLists.txt  ChatMessage.cpp  ChatMessage.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  ConnectivityManager.cpp  ConnectivityManager.h  CriticalSection.h  CryptoManager.cpp  CryptoManager.h  DCPlusPlus.cpp  DCPlusPlus.h  DebugManager.cpp  (+162 more)
dcpp/po/: be.po  bg.po  cs.po  da.po  de.po  el.po  en.po  es.po  eu.po  fr.po  hu.po  ie.po  it.po  ka.po  libdcpp.pot  libdcpp_be.po  libdcpp_en.po  libdcpp_es.po  libdcpp_fr.po  libdcpp_hu.po  libdcpp_pl.po  libdcpp_ru.po  libdcpp_sr.po  libdcpp_uk.po  libeiskaltdcpp.pot  pl.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  sv_SE.po  svk.po  tr.po  uk.po  update_po.sh  vi.po  zh_CN.po
dht/: BootstrapManager.cpp  BootstrapManager.h  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  Constants.h  DHT-specs.txt  DHT.cpp  DHT.h  IndexManager.cpp  IndexManager.h  KBucket.cpp  KBucket.h  SearchManager.cpp  SearchManager.h  TaskManager.cpp  TaskManager.h  UDPSocket.cpp  UDPSocket.h  Utils.cpp  Utils.h  dht.vcproj  stdafx.cpp  stdafx.h
eiskaltdcpp/: ADLSModel.cpp  ADLSModel.h  ActionCustomizer.cpp  ActionCustomizer.h  AntiSpamFrame.cpp  AntiSpamFrame.h  Antispam.cpp  Antispam.h  ArenaWidget.cpp  ArenaWidget.h  ArenaWidgetContainer.h  CMakeLists.txt  ChatEdit.cpp  ChatEdit.h  CustomFontModel.cpp  CustomFontModel.h  DownloadQueue.cpp  DownloadQueue.h  DownloadQueueModel.cpp  DownloadQueueModel.h  EmoticonDialog.h  EmoticonFactory.cpp  EmoticonFactory.h  EmoticonObject.h  FavoriteHubModel.cpp  FavoriteHubModel.h  FavoriteHubs.cpp  FavoriteHubs.h  FavoriteUsers.cpp  FavoriteUsers.h  FavoriteUsersModel.cpp  FavoriteUsersModel.h  FileBrowserModel.cpp  FileBrowserModel.h  FinishedTransfers.cpp  FinishedTransfers.h  FinishedTransfersModel.cpp  FinishedTransfersModel.h  FlowLayout.cpp  FlowLayout.h  (+104 more)
eiskaltdcpp-cli/: CMakeLists.txt  LICENSE  README  README_ru  TODO  cli-json-curl.sh  cli-jsonrpc-config.pl  cli-jsonrpc-curl.pl  cli-jsonrpc.pl  cli-xmlrpc-config.pl  cli-xmlrpc.pl  cli.pl  config.pl  eiskaltdcpp-cli-jsonrpc.1  eiskaltdcpp-cli-xmlrpc.1  eiskaltdcpp-cli.1  jcli.pl  man.eiskaltdcpp-cli-jsonrpc.html  man.eiskaltdcpp-cli-xmlrpc.html  man.eiskaltdcpp-cli.html  manual.eiskaltdcpp-cli-jsonrpc.html  manual.eiskaltdcpp-cli-xmlrpc.html
eiskaltdcpp-daemon/: CMakeLists.txt  ServerManager.cpp  ServerManager.h  ServerThread.cpp  ServerThread.h  client.cpp  eiskaltdcpp-daemon.1  eiskaltdcpp-daemon.appdata.xml  eiskaltdcpp-daemon.desktop  eiskaltdcpp-daemon_insserv  jsonrpcmethods.cpp  jsonrpcmethods.h  man.eiskaltdcpp-daemon.html  manual.eiskaltdcpp-daemon.html  nasdc.cpp  stdafx.h  utility.cpp  utility.h  xmlrpcserver.h
eiskaltdcpp-gtk/: CMakeLists.txt  Credits.txt  License.txt  eiskaltdcpp-gtk.1  eiskaltdcpp-gtk.desktop  man.eiskaltdcpp-gtk.html  manual.eiskaltdcpp-gtk.html
eiskaltdcpp-gtk/emoticons/: flylink.xml  kde4.xml  pelink.xml
eiskaltdcpp-gtk/glade/: ADLSearch.glade  adlsearch.glade  cmddebug.glade  downloadqueue.glade  favoritehubs.glade  favoriteusers.glade  finishedtransfers.glade  hash.glade  hub.glade  mainwindow.glade  privatemessage.glade  publichubs.glade  search.glade  searchspy.glade  settingsdialog.glade  sharebrowser.glade  transfers.glade
eiskaltdcpp-gtk/po/: be.po  (+28 more)
eiskaltdcpp-qt/: CMakeLists.txt  ChangeLog.txt  ChangeLog_ru.txt  ChangeLog_uk.txt  Info.plist.in  eiskaltdcpp-qt.1  eiskaltdcpp-qt.appdata.xml  eiskaltdcpp-qt.desktop  eiskaltdcpp-qt.pro  eiskaltdcpp-qt.rc  man.eiskaltdcpp-qt.html  manual.eiskaltdcpp-qt.html  translations.pro
eiskaltdcpp-wt/: CMakeLists.txt  DownloadQueue.cpp  SearchFrame.cpp  SearchFrame.h  SearchModel.cpp  SearchModel.h  Utils.cpp  Utils.h  eiskaltdcpp-wt.1  eiskaltdcpp-wt.pro  eiskaltdcpp-wt_run.sh  eiskaltdcpp.css  main.cpp  man.eiskaltdcpp-wt.html
extra/: CMakeLists.txt  antispam.cpp  antispam.h  dyndns.cpp  dyndns.h  freespace.cpp  freespace.h  fsusage.c  fsusage.h  ipfilter.cpp  ipfilter.h  lunar.h  magnet.cpp  magnet.h  noncopyable.h  stacktrace.h  upnpc.cpp  upnpc.h  upnpc6.cpp  upnpc6.h
fsusage/: CMakeLists.txt  freespace.cpp  freespace.h  fsusage.c
haiku/: CMakeLists.txt  boost.diff  haiku.rdef
json/: CMakeLists.txt
miniupnp/: CMakeLists.txt  upnpc.cpp
miniupnpc/: CMakeLists.txt  connecthostport.c  miniupnpc.c
nasdc/: CMakeLists.txt  ServerManager.cpp  ServerManager.h  ServerThread.cpp  ServerThread.h  eiskaltdcpp-daemon.1  jsonrpcmethods.cpp  jsonrpcmethods.h  man.eiskaltdcpp-daemon.html  nasdc.cpp  sampleclient.cpp  stdafx.cpp  stdafx.h  utility.cpp  utility.h  xmlrpcserver.h
upnp/: CMakeLists.txt  upnpc.cpp  upnpc.h
(+1302 files in other folders)
